--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -15098,7 +15098,7 @@ be a descendant of the grid when it is being dragged.
 .app-notification__title {
   padding: 8px 20px;
   text-align: center;
-  background-color: #FF9922;
+  background-color: #ffb45c;
   color: #333;
 }
 
@@ -15161,7 +15161,7 @@ be a descendant of the grid when it is being dragged.
   width: 230px;
   overflow: auto;
   z-index: 10;
-  background-color: #222d32;
+  background-color: #000000;
   -webkit-box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
   -webkit-transition: left 0.3s ease,
