--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -15884,7 +15884,7 @@ be a descendant of the grid when it is being dragged.
 
 .material-half-bg {
   height: 100vh;
-  background-color: #e7e7e7;
+  background-color: #000000;
   position: fixed;
   top: 0;
   left: 0;
@@ -15894,7 +15894,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 .material-half-bg .cover {
-  background-color: #009688;
+  background-color: #FF9922;
   height: 50vh;
 }
 
@@ -16382,7 +16382,6 @@ be a descendant of the grid when it is being dragged.
 
 .login-content .logo {
   margin-bottom: 40px;
-  font-family: "Niconne";
   color: #fff;
 }
 
@@ -16498,7 +16497,6 @@ be a descendant of the grid when it is being dragged.
 }
 
 .lockscreen-content .logo {
-  font-family: "Niconne";
   margin-bottom: 40px;
   color: #fff;
 }
@@ -16635,7 +16633,6 @@ be a descendant of the grid when it is being dragged.
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-image: url(http://placeimg.com/1200/300/nature);
   background-size: cover;
   background-position: center;
   min-height: 300px;
